--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -11,12 +11,13 @@
 </head>
 
 <body>
-    <div class="app">
-        {{> header}}
-        <div class="container">
+    <div class="app d-flex flex-column">
+        <div class="header">
+            {{> header}}
+        </div>
+        <div class="body">
             {{{body}}}
         </div>
-        {{> footer}}
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
