--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -5,7 +5,9 @@
             <div class="card" style="width: 18rem;">
                 <img src="..." class="card-img-top" alt={{this.name}}>
                 <div class="card-body">
-                    <h5 class="card-title">{{this.name}}</h5>
+                    <a href="/courses/{{this.slug}}">
+                        <h5 class="card-title">{{this.name}}</h5>
+                    </a>
                     <p class="card-text">{{this.des}}</p>
                     <a href="#" class="btn btn-primary">Mua ngay</a>
                 </div>
