--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,5 +1,6 @@
 <div class="mt-4">
-    <div class="row">
+    <div class="container">
+        <div class="row">
         {{#each courses}}
         <div class="col">
             <div class="card" style="width: 18rem;">
@@ -14,5 +15,6 @@
             </div>
         </div>
         {{/each}}
+    </div>
     </div>
 </div>
